--- a/SmartTrip/src/index.html
+++ b/SmartTrip/src/index.html
@@ -11,6 +11,9 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css ">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxCcq_rhwetsv6t0hdy6giyJ41wN-oMic&v=3.exp&libraries=places ">
+  </script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
